--- a/src/Components/InfoUser/info-user.css
+++ b/src/Components/InfoUser/info-user.css
@@ -2,6 +2,5 @@
     border: solid 2px black;
     text-align: center;
     width: 20em;
-    margin-left: 38em;
-    margin-bottom: 10px;
+    margin: 10px auto;
 }
